# rust-gui

./: .gitignore  Cargo.toml  README.md  launch.json
resources/i18n/en-CN/: builtin.ftl
resources/i18n/en-US/: builtin.ftl
src/: main.rs
src/components/: day_list.rs  dummy_window.rs  girl.rs  menu.rs  mod.rs
src/helpers/: app_delegate.rs  event_handler.rs  mod.rs  rich_editor.rs  rich_text.rs  timing_controller.rs  window_controller.rs
src/types/: day.rs  mod.rs  rich_editor.rs  selector.rs
src/utils/: api.rs
