[package]
name = "gui"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
druid = { version = "0.7.0", features = ["im"] }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0.125", features = ["derive"] }
